# carta-schema

./: .gitignore  Cargo.toml  README.md  coverage.sh  package-lock.json  package.json  schema.txt  schema2.txt  schema_png.txt  schema_png2.txt
.circleci/: config.yml
carta-schema/: Cargo.toml
carta-schema/src/: error.rs  lib.rs  type_check.rs
lib/: index.js
native/: Cargo.toml
native/carta-schema/src/: parser.rs  tokeniser.rs  type_check.rs
native/src/: lib.rs
native/src/compiler/: builtin_types.rs  mod.rs  parser.rs  tokeniser.rs  type_check.rs  types.rs
src/: apply.rs  builtin_types.rs  correctness.rs  error.rs  lib.rs  parser.rs  tokeniser.rs  type_check.rs
tests/: integration_test.rs
