[package]
name = "carta-schema"
version = "1.0.0"
authors = ["Andrew Morcom"]
license = "GPL-3.0-or-later"
edition = "2018"
description = "Parse a schema file.  Apply the schema to binary data for exploration and visualisation"
readme = "README.md"
repository = "https://github.com/Jubulani/carta-schema"
homepage = "https://jubulani.github.io/"
categories = ["parser-implementations", "visualization", "wasm"]
keywords = ["reverse-engineering", "binary-data", "visualization"]

[dependencies]
byteorder = "1.3.2"
log = "0.4.6"
failure = "0.1.5"
failure_derive = "0.1.5"
serde = "1.0"
serde_derive = "1.0"