[package]
name = "carta-schema"
version = "1.0.1"
authors = ["Andrew Morcom"]
license = "GPL-3.0-or-later"
edition = "2021"
description = "Parse a schema file.  Apply the schema to binary data for exploration and visualisation"
readme = "README.md"
repository = "https://github.com/Jubulani/carta-schema"
homepage = "https://jubulani.github.io/"
categories = ["parser-implementations", "visualization", "wasm"]
keywords = ["reverse-engineering", "binary-data", "visualization"]

[dependencies]
log = "0.4"
failure = "0.1.8"
failure_derive = "0.1.8"
serde = "1.0"
serde_derive = "1.0"