[package]
name = "carta-backend"
version = "0.1.0"
authors = ["Andrew Morcom"]
license = "GPL-3.0-or-later"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "carta_backend"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
lazy_static = "1.2.0"
log = "0.4.6"
neon = "0.2.0"
regex = "1.1.0"
simplelog = "^0.5.0"